INCLUDE(admCheckGtk)
INCLUDE(admPluginVideoEncoder)

checkGtk()

IF (GTK_FOUND AND GTHREAD_FOUND)
	SET(ADM_vidEnc_x264_Gtk_SRCS gtkSupport.cpp x264ConfigDialog.cpp)

	ADD_DEFINITIONS(${GTK_CFLAGS})
	ADD_LIBRARY(${GTK_PLUGIN_NAME} SHARED ${ADM_vidEnc_x264_Gtk_SRCS})
	TARGET_LINK_LIBRARIES(${GTK_PLUGIN_NAME} ADM_vidEnc_x264 ${GTK_LDFLAGS} ${GTHREAD_LDFLAGS})
	
	INIT_VIDEO_ENCODER_PLUGIN(${GTK_PLUGIN_NAME})
	INSTALL(TARGETS ${GTK_PLUGIN_NAME} DESTINATION "${VIDENC_INSTALL_DIR}${PLUGIN_SCHEMA_DIR}")
ENDIF (GTK_FOUND AND GTHREAD_FOUND)